# phenoscribe

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  INSTALL.md  README.md  config.yaml  docker-entrypoint.sh  pyproject.toml
context/: CRS__under20_35_HPO_corr.xlsx  README.md  architecture-notes.md  hop_list_terms.csv  ~$CRS__under20_35_HPO_corr.xlsx
context/exports/: 2026-03-01-adr-hpo-pipeline.md  2026-03-01-client-report-architecture-validation.md  2026-05-30-ontogpt-benchmark.md  2026-06-01-stakeholder-update-marc.md  2026-06-02-email-coding-audit.md  2026-06-03-embedding-recall.md  2026-06-03-gold-standard-benchmark.md  2026-06-03-mlx-transcription-benchmark.md  2026-06-03-mock-robinson-review.md  2026-06-03-validation-baseline.md  hpo-identifier-adr-2026-03-01.md  ontogpt-benchmark-2026-05-30.md
context/plans/: 2026-05-30-cross-platform-docker-distribution.md  2026-06-02-dedup-and-regression-cases.md  2026-06-02-product-owner-review.md  hpo-identifier-plan-2026-03-01.md  stakeholder-feedback-plan-2026-05-30.md
context/shipped/: 2026-03-01-hpo-pipeline-initial-build.md  2026-05-30-stakeholder-feedback-round-1.md  2026-06-01-gradio-web-app.md  2026-06-03-robinson-review-response.md  hpo-identifier-plan-2026-03-01.md
scripts/: benchmark_gsc.py  benchmark_ontogpt.py  build_sapbert_index.py  eval_recall.py  seed_hpo.py  validate.py
src/phenoscribe/: __init__.py  aggregate.py  cli.py  config.py  diarize.py  embeddings.py  extract_symptoms.py  gui.py  hpo_index.py  jobs.py  llm.py  match_hpo.py  modifiers.py  ontology.py  output.py  pii.py  pipeline.py  semantic_similarity.py  transcribe.py  validate.py
tests/: test_aggregate.py  test_benchmark_gsc.py  test_benchmark_ontogpt.py  test_cli.py  test_embeddings.py  test_extract_symptoms.py  test_healthy_control.py  test_hpo_index.py  test_hpo_version.py  test_match_hpo.py  test_modifiers.py  test_negation.py  test_ontology.py  test_output.py  test_patient_join.py  test_pii.py  test_transcribe.py  test_validate.py
tests/fixtures/: healthy_control.txt  sample.txt
