[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phenoscribe"
version = "0.1.0"
description = "Automated HPO phenotype coding from patient interviews"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "chromadb>=0.5.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "sentencepiece>=0.2.0",
    "pyannote.audio>=3.1.0",
    "hpo-toolkit>=0.5,<1.0",
]

[project.scripts]
phenoscribe = "phenoscribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phenoscribe"]
