[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phenoscribe"
version = "0.1.0"
description = "Automated HPO phenotype coding from patient interviews"
requires-python = ">=3.10"
# Upper bounds are deliberate. This is a clinical tool: a major release of
# torch/transformers can change the OpenMed PII model's tokenisation or NER
# output, which changes what reaches the LLM and therefore the codes emitted.
# Caps below the next major prevent a silent breaking upgrade. The bounds sit
# above what is currently installed (torch 2.12, transformers 5.9); raise the
# cap deliberately after re-validating PII output on a known transcript.
dependencies = [
    "faster-whisper>=1.0.0,<2",
    "transformers>=4.40.0,<6",
    "torch>=2.0.0,<3",
    "chromadb>=0.5.0,<2",
    "openpyxl>=3.1.0,<4",
    "openai>=1.0.0,<3",
    "anthropic>=0.30.0,<1",
    "pyyaml>=6.0,<7",
    "requests>=2.31.0,<3",
    "sentencepiece>=0.2.0,<1",
    "pyannote.audio>=3.1.0,<4",
    "hpo-toolkit>=0.5,<1.0",
    "matplotlib>=3.7,<4",
    "gradio>=5,<6",
    "mlx-whisper>=0.4,<1 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
phenoscribe = "phenoscribe.cli:main"
phenoscribe-gui = "phenoscribe.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phenoscribe"]
